--- a/app-games/src/main/AndroidManifest.xml
+++ b/app-games/src/main/AndroidManifest.xml
@@ -35,6 +35,17 @@
 
         <data android:scheme="ag" />
       </intent-filter>
+
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+        <data android:path="/download"/>
+        <data android:path="/app"/>
+        <data android:scheme="http"/>
+        <data android:scheme="https"/>
+        <data android:host="*.aptoide.com"/>
+      </intent-filter>
       <!-- ${dataPlaceholder} -->
     </activity>
 
