--- a/app-games/src/main/AndroidManifest.xml
+++ b/app-games/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
       android:networkSecurityConfig="@xml/network_security_config"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+      android:theme="@style/AptoideGames.Theme.OptOutEdgeToEdgeEnforcement"
       tools:replace="android:allowBackup">
     <uses-library android:name="org.apache.http.legacy" android:required="false" />
 
