--- a/gradle.properties
+++ b/gradle.properties
@@ -116,6 +116,8 @@ SENTRY_DSN_KEY_DEBUG=0
 AMPLITUDE_KEY=0
 #INDICATIVE
 INDICATIVE_KEY=0
+INDICATIVE_KEY_DEV=0
+INDICATIVE_KEY_PROD=0
 #DT
 VERSION_CODE_GAMESHUB=20666
 VERSION_CODE_APTOIDEGAMES=1
